--- a/index.html
+++ b/index.html
@@ -1,153 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title data-i18n="title">TopSerials — Популярные зарубежные сериалы</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      transition: background-color 0.3s, color 0.3s;
-      background-color: #f0f2f5;
-      color: #000;
-    }
-    header {
-      background-color: #222;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    header button {
-      margin-top: 10px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 6px;
-      background: #444;
-      color: #fff;
-      cursor: pointer;
-    }
-    .controls {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin: 10px 0;
-    }
-    .controls select, .controls button {
-      padding: 6px 12px;
-      font-size: 14px;
-      border-radius: 6px;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-    .card:hover {
-      transform: scale(1.02);
-    }
-    .card img {
-      width: 100%;
-      height: 350px;
-      object-fit: cover;
-    }
-    .card-content {
-      padding: 15px;
-    }
-    .title {
-      font-size: 18px;
-      font-weight: bold;
-      margin-bottom: 8px;
-    }
-    .rating, .date {
-      font-size: 14px;
-      color: #555;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1 data-i18n="header">TopSerials: Зарубежные сериалы</h1>
-    <p data-i18n="desc">Фильтрация по году, рейтингу, жанру. Обновление через TMDB API</p>
-    <button id="theme-toggle">🌙 <span data-i18n="dark_mode">Тёмная тема</span></button>
-    <select id="lang-switch">
-      <option value="ru">🇷🇺 Русский</option>
-      <option value="en">🇬🇧 English</option>
-    </select>
-  </header>
+    const savedTheme = localStorage.getItem("theme") || "light";
+    applyTheme(savedTheme);
 
-  <div class="controls">
-    <select id="genre-select">
-      <option value="" data-i18n="all_genres">Все жанры</option>
-    </select>
-    <select id="year-select">
-      <option value="" data-i18n="all_years">Все годы</option>
-    </select>
-    <select id="rating-select">
-      <option value="" data-i18n="all_ratings">Все рейтинги</option>
-      <option value="9">9+</option>
-      <option value="8">8+</option>
-      <option value="7">7+</option>
-    </select>
-    <button onclick="loadSection('popular')" data-i18n="top10">🔥 Топ 10</button>
-    <button onclick="loadSection('airing_today')" data-i18n="new">🆕 Новинки</button>
-    <button onclick="loadSection('all')" data-i18n="all">🌍 Все</button>
-  </div>
-
-  <div class="container" id="serials-container"></div>
-
-  <script>
-    const translations = {
-      ru: {
-        title: "TopSerials — Популярные зарубежные сериалы",
-        header: "TopSerials: Зарубежные сериалы",
-        desc: "Фильтрация по году, рейтингу, жанру. Обновление через TMDB API",
-        dark_mode: "Тёмная тема",
-        light_mode: "Светлая тема",
-        all_genres: "Все жанры",
-        all_years: "Все годы",
-        all_ratings: "Все рейтинги",
-        top10: "🔥 Топ 10",
-        new: "🆕 Новинки",
-        all: "🌍 Все"
-      },
-      en: {
-        title: "TopSerials — Top Foreign TV Shows",
-        header: "TopSerials: Foreign TV Shows",
-        desc: "Filter by year, rating, genre. Powered by TMDB API",
-        dark_mode: "Dark Mode",
-        light_mode: "Light Mode",
-        all_genres: "All Genres",
-        all_years: "All Years",
-        all_ratings: "All Ratings",
-        top10: "🔥 Top 10",
-        new: "🆕 New",
-        all: "🌍 All"
-      }
-    };
-
-    function translate(lang) {
-      document.querySelectorAll("[data-i18n]").forEach(el => {
-        const key = el.getAttribute("data-i18n");
-        if (translations[lang][key]) el.textContent = translations[lang][key];
-      });
-    }
-
-    document.getElementById("lang-switch").addEventListener("change", e => {
-      const lang = e.target.value;
-      translate(lang);
-    });
-  </script>
-  <!-- Остальной JavaScript остаётся без изменений -->
-</body>
-</html>
+    // 🌍 Автоопределение языка браузера
+    const browserLang = navigator.language.startsWith("ru") ? "ru" : "en";
+    document.getElementById("lang-switch").value = browserLang;
+    translate(browserLang);
